--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 script:
+    - npm test
+    - npm run webdriver-manager update
     - npm run protractor
+    - npm build
