--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ cache:
     directories:
         - node_modules
 before_script:
+    - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
+    - sleep 3
 script:
     - npm test
     - npm run webdriver-manager update
