--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 cache:
     directories:
         - node_modules
+before_install:
+    - wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq chromium-browser
 before_script:
     - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
